// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures (snapshot) > channel-messages-only.yaml — omitted operation.messages falls back to channel messages 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://ping.example.com/ping');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "timestamp": 1735689600
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > multi-message.yaml — operation with multiple messages uses the first message 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://trading.example.com/orders');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "symbol": "ACME",
    "quantity": 10
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > pubsub.yaml — receive-only operation has no send call, shows example as a comment, and flags the unresolved query param 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

import WebSocket from 'ws';

const socket = new WebSocket('wss://alerts.example.com/alerts?region=%3Cregion%3E');

// Example message shape for this operation ("sampleAlert"):
// {
//   "severity": "high",
//   "message": "disk usage above threshold"
// }

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > pubsub.yaml — send operation 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://alerts.example.com/heartbeat');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "ok": true
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > simple.yaml — send-only, no bindings, no channel parameters 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://ping.example.com/ping');

socket.on('open', () => {
  socket.send(JSON.stringify({
    "timestamp": 1735689600
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) > with-bindings.yaml — query param, header, and channel parameter all resolve 1`] = `
"import WebSocket from 'ws';

const socket = new WebSocket('wss://chat.example.com/rooms/general?token=abc123token', {
  headers: {
    'X-Client-Version': '1.0'
  },
});

socket.on('open', () => {
  socket.send(JSON.stringify({
    "text": "hello world",
    "from": "alice"
  }));
});

socket.on('message', (data) => {
  console.log(data.toString());
});"
`;

exports[`fixtures (snapshot) — go/gorilla > pubsub.yaml — receive-only operation loops over ReadMessage without writing 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

package main

import (
	"log"

	"github.com/gorilla/websocket"
)

func main() {
	url := "wss://alerts.example.com/alerts?region=%3Cregion%3E"

	conn, _, err := websocket.DefaultDialer.Dial(url, nil)
	if err != nil {
		log.Fatal("dial:", err)
	}
	defer conn.Close()

	// Example message shape for this operation ("sampleAlert"):
	// {
	//   "severity": "high",
	//   "message": "disk usage above threshold"
	// }

	for {
		_, message, err := conn.ReadMessage()
		if err != nil {
			log.Println("read:", err)
			return
		}
		log.Println(string(message))
	}
}"
`;

exports[`fixtures (snapshot) — go/gorilla > simple.yaml — send-only, no bindings 1`] = `
"package main

import (
	"encoding/json"
	"log"

	"github.com/gorilla/websocket"
)

func main() {
	url := "wss://ping.example.com/ping"

	conn, _, err := websocket.DefaultDialer.Dial(url, nil)
	if err != nil {
		log.Fatal("dial:", err)
	}
	defer conn.Close()

	payload := map[string]interface{}{
		"timestamp": 1735689600,
	}

	data, err := json.Marshal(payload)
	if err != nil {
		log.Fatal("marshal:", err)
	}
	if err := conn.WriteMessage(websocket.TextMessage, data); err != nil {
		log.Fatal("write:", err)
	}

	_, message, err := conn.ReadMessage()
	if err != nil {
		log.Fatal("read:", err)
	}
	log.Println(string(message))
}"
`;

exports[`fixtures (snapshot) — go/gorilla > with-bindings.yaml — query param and header both resolve 1`] = `
"package main

import (
	"encoding/json"
	"log"
	"net/http"

	"github.com/gorilla/websocket"
)

func main() {
	url := "wss://chat.example.com/rooms/general?token=abc123token"

	header := http.Header{}
	header.Set("X-Client-Version", "1.0")

	conn, _, err := websocket.DefaultDialer.Dial(url, header)
	if err != nil {
		log.Fatal("dial:", err)
	}
	defer conn.Close()

	payload := map[string]interface{}{
		"text": "hello world",
		"from": "alice",
	}

	data, err := json.Marshal(payload)
	if err != nil {
		log.Fatal("marshal:", err)
	}
	if err := conn.WriteMessage(websocket.TextMessage, data); err != nil {
		log.Fatal("write:", err)
	}

	_, message, err := conn.ReadMessage()
	if err != nil {
		log.Fatal("read:", err)
	}
	log.Println(string(message))
}"
`;

exports[`fixtures (snapshot) — javascript/kafkajs > kafka.yaml — receive operation subscribes and consumes, without sending 1`] = `
"import { Kafka } from 'kafkajs';

const kafka = new Kafka({
  clientId: 'order-service-consumer',
  brokers: ['broker1.example.com:9092', 'broker2.example.com:9092'],
});

const consumer = kafka.consumer({ groupId: 'order-processing-service' });

// Example message shape for this operation ("sampleOrderCreated"):
// {
//   "orderId": "order-42",
//   "total": 59.99
// }

async function main() {
  await consumer.connect();
  await consumer.subscribe({ topic: 'order.events.v1', fromBeginning: true });

  await consumer.run({
    eachMessage: async ({ message }) => {
      console.log(message.value?.toString());
    },
  });
}

main();"
`;

exports[`fixtures (snapshot) — javascript/kafkajs > kafka.yaml — send operation resolves the topic override and message key 1`] = `
"import { Kafka } from 'kafkajs';

const kafka = new Kafka({
  clientId: 'order-service-producer',
  brokers: ['broker1.example.com:9092', 'broker2.example.com:9092'],
});

const producer = kafka.producer();

async function main() {
  await producer.connect();
  await producer.send({
    topic: 'order.events.v1',
    messages: [
      {
        key: 'order-42',
        value: JSON.stringify({
          "orderId": "order-42",
          "total": 59.99
        }),
      },
    ],
  });
  await producer.disconnect();
}

main();"
`;

exports[`fixtures (snapshot) — javascript/websocket (browser) > pubsub.yaml — receive-only operation uses addEventListener 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

const socket = new WebSocket('wss://alerts.example.com/alerts?region=%3Cregion%3E');

// Example message shape for this operation ("sampleAlert"):
// {
//   "severity": "high",
//   "message": "disk usage above threshold"
// }

socket.addEventListener('message', (event) => {
  console.log(event.data);
});"
`;

exports[`fixtures (snapshot) — javascript/websocket (browser) > simple.yaml — send-only, no bindings 1`] = `
"const socket = new WebSocket('wss://ping.example.com/ping');

socket.addEventListener('open', () => {
  socket.send(JSON.stringify({
    "timestamp": 1735689600
  }));
});

socket.addEventListener('message', (event) => {
  console.log(event.data);
});"
`;

exports[`fixtures (snapshot) — javascript/websocket (browser) > with-bindings.yaml — query param resolves, header is documented as unsupported and omitted 1`] = `
"// NOTE: this operation's "ws" binding declares handshake headers
// (X-Client-Version), but the browser-native WebSocket API cannot
// set custom headers on the handshake request — they are omitted below.
// Move any required auth into the query string, or generate a Node.js
// snippet instead (targetId: "javascript", clientId: "ws").

const socket = new WebSocket('wss://chat.example.com/rooms/general?token=abc123token');

socket.addEventListener('open', () => {
  socket.send(JSON.stringify({
    "text": "hello world",
    "from": "alice"
  }));
});

socket.addEventListener('message', (event) => {
  console.log(event.data);
});"
`;

exports[`fixtures (snapshot) — python/websockets > pubsub.yaml — receive-only operation uses async for 1`] = `
"# NOTE: some values could not be resolved from the AsyncAPI document's
# default/examples and were filled with a placeholder — replace them
# with real values before running this snippet:
#   - query param "region"

import asyncio

import websockets


async def main() -> None:
    async with websockets.connect("wss://alerts.example.com/alerts?region=%3Cregion%3E") as websocket:

        # Example message shape for this operation ("sampleAlert"):
        # {
        #   "severity": "high",
        #   "message": "disk usage above threshold"
        # }

        async for message in websocket:
            print(message)


asyncio.run(main())"
`;

exports[`fixtures (snapshot) — python/websockets > simple.yaml — send-only, no bindings 1`] = `
"import asyncio
import json

import websockets


async def main() -> None:
    async with websockets.connect("wss://ping.example.com/ping") as websocket:

        await websocket.send(
            json.dumps({
                "timestamp": 1735689600,
            })
        )

        message = await websocket.recv()
        print(message)


asyncio.run(main())"
`;

exports[`fixtures (snapshot) — python/websockets > with-bindings.yaml — query param and header both resolve 1`] = `
"import asyncio
import json

import websockets


async def main() -> None:
    async with websockets.connect(
        "wss://chat.example.com/rooms/general?token=abc123token",
        additional_headers={
            "X-Client-Version": "1.0",
        },
    ) as websocket:

        await websocket.send(
            json.dumps({
                "text": "hello world",
                "from": "alice",
            })
        )

        message = await websocket.recv()
        print(message)


asyncio.run(main())"
`;

exports[`fixtures (snapshot) — rust/tokio-tungstenite > pubsub.yaml — receive-only operation loops over read without sending 1`] = `
"// NOTE: some values could not be resolved from the AsyncAPI document's
// default/examples and were filled with a placeholder — replace them
// with real values before running this snippet:
//   - query param "region"

use futures_util::{SinkExt, StreamExt};
use tokio_tungstenite::{connect_async, tungstenite::Message};


#[tokio::main]
async fn main() {
    let url = "wss://alerts.example.com/alerts?region=%3Cregion%3E";

    let (ws_stream, _) = connect_async(url).await.expect("Failed to connect");
    let (_write, mut read) = ws_stream.split();

    // Example message shape for this operation ("sampleAlert"):
    // {
    //   "severity": "high",
    //   "message": "disk usage above threshold"
    // }

    while let Some(msg) = read.next().await {
        println!("{}", msg.expect("Failed to read message"));
    }
}"
`;

exports[`fixtures (snapshot) — rust/tokio-tungstenite > simple.yaml — send-only, no bindings 1`] = `
"use futures_util::{SinkExt, StreamExt};
use tokio_tungstenite::{connect_async, tungstenite::Message};


#[tokio::main]
async fn main() {
    let url = "wss://ping.example.com/ping";

    let (ws_stream, _) = connect_async(url).await.expect("Failed to connect");
    let (mut write, mut read) = ws_stream.split();

    let payload = serde_json::json!({
      "timestamp": 1735689600
    });

    write
        .send(Message::Text(payload.to_string().into()))
        .await
        .expect("Failed to send message");

    if let Some(msg) = read.next().await {
        println!("{}", msg.expect("Failed to read message"));
    }
}"
`;

exports[`fixtures (snapshot) — rust/tokio-tungstenite > with-bindings.yaml — query param and header both resolve 1`] = `
"use futures_util::{SinkExt, StreamExt};
use tokio_tungstenite::{connect_async, tungstenite::client::IntoClientRequest, tungstenite::Message};


#[tokio::main]
async fn main() {
    let url = "wss://chat.example.com/rooms/general?token=abc123token";

    let mut request = url.into_client_request().expect("Invalid URL");
    request
        .headers_mut()
        .insert("X-Client-Version", "1.0".parse().expect("Invalid header value"));

    let (ws_stream, _) = connect_async(request).await.expect("Failed to connect");
    let (mut write, mut read) = ws_stream.split();

    let payload = serde_json::json!({
      "text": "hello world",
      "from": "alice"
    });

    write
        .send(Message::Text(payload.to_string().into()))
        .await
        .expect("Failed to send message");

    if let Some(msg) = read.next().await {
        println!("{}", msg.expect("Failed to read message"));
    }
}"
`;
